fixed z-index

--- a/FE_Capstone/src/scss/musicPlayer.scss
+++ b/FE_Capstone/src/scss/musicPlayer.scss
@@ -63,7 +63,6 @@ input[type="range"]::-webkit-slider-thumb {
   left: 0.5em;
   right: 0.5em;
   background-color: rgb(35, 35, 35);
-  z-index: 2;
   width: 90%;
 }
 
