--- a/FE_Capstone/src/scss/playlist.scss
+++ b/FE_Capstone/src/scss/playlist.scss
@@ -12,7 +12,6 @@
     background-repeat: no-repeat;
     background-size: cover;
     // background-color: #ffffff;
-    z-index: 0;
 }
 
 .change-hero {
@@ -25,7 +24,6 @@
     width: 100%;
     padding: 0.5em 0;
     min-height: fit-content;
-    z-index: 3;
     // background-color: $new-dark !important;
     // background: #2B2D42 !important;
     // background: linear-gradient(0deg, rgba(43, 45, 66, 1) 5%, rgba(255, 255, 255, 0.28) 65%);   
@@ -77,7 +75,6 @@
   right: 28vw;
   top: 26vh;
   background-color: rgb(56, 56, 56);
-  z-index: 2;
 //   border: 0.5px solid rgba(0, 0, 0, 0.208);
   /* padding: 0.5em 1em; */
   width: 9em;
