--- a/FE_Capstone/src/scss/song.scss
+++ b/FE_Capstone/src/scss/song.scss
@@ -38,7 +38,6 @@
   right: 0.5em;
   top: 2.5em;
   background-color: rgb(56, 56, 56);
-  z-index: 1;
 //   border: 0.5px solid rgba(0, 0, 0, 0.208);
   /* padding: 0.5em 1em; */
   width: 6em;
